fixed minor font size and spacing

--- a/style.css
+++ b/style.css
@@ -306,14 +306,14 @@ section.projects-text{
     display: flex;
     justify-content: center;
     flex-direction: column;
+    text-align: left;
 }
 
-#explanation-text{
+span#explanation-text{
     position: relative;
     color: white;
-    font-size: 2.5vh;
-    width: 100%;
-    padding-left: 12vw;
+    font-size: 2vh;
+    padding-left: 12.5vw;
     opacity: 0.1;
 }
 
